# popot

./: INSTALL  L106.txt  L17a.txt  L254.txt  L31.txt  L4.txt  L4b.txt  L5  L55Gr.txt  L55c.txt  L67.txt  L9.txt  PSO.c  ProjectHome.md  README  ReadMe.txt  alea.c  cec2005pb.c  f_rand_quasi.txt  f_run.txt  f_synth.txt  f_trace.txt  main  main.c  main.h  perf.c  performances.ods  problemDef.c
2DIllustrations/: example-2D.cc  example-moving.cc
2DIllustrations/PlotExample2D/: makefile
2DIllustrations/PlotExampleMoving/: makefile
Benchmarks/SPSO2006_C/: Readme  Standard_PSO_2006.c
Benchmarks/popot-SPSO/: bench.cc  bench.h  bench2.cc  bench_general.cc  create_document.py  run-bench-general.py  run-bench.py
Benchmarks/swarm-SPSO/: bench_general.cc  bench_general.h  run-bench-general.py
CMakeModules/: FindGSL.cmake
CTypes/: Pb.cc  Pb_popot.cc  Problem.cc  Readme  test.py  test_cmaes_popot.py  test_function_evaluation.py
RPM/: popot-1.00-Linux-3.4.4-5.fc17.x86_64.rpm  popot-1.10-Linux-2.6.35.14-106.fc14.i686.PAE.rpm  popot-1.20-Linux-2.6.35.14-106.fc14.i686.PAE.rpm  popot-1.20-Linux-3.5.3-1.fc17.i686.rpm  popot-1.21-Linux-3.6.11-1.fc16.i686.PAE.rpm
Trash/: Performances.html  Performances.ods  example-004.cc
Trash/PlotExample004/: makefile
Trash/SPSO2011_C/: SPSO  avec_init_random.data  cec2005.c  main.c  main.h  perf.c  perf_pressure_vessel.c  problemDef.c  res.data  tools.c
branches/SPSO2011/: L17b.txt  L256.txt  L43.txt  L55.txt  L55b.txt  PSO.c  alea.c  cec2005.c  compile.sh  f_run.txt  f_synth.txt  f_trace.txt  main  main.c  notes  perf.c  problemDef.c
branches/popot-1.20/: CMakeLists.txt
doc/html/: algorithm_8h.html  algorithm_8h_source.html  algorithm__backup_8h.html  algorithm__backup_8h_source.html  annotated.html  backup__individuals_8h.html  benchmark_8h.html  benchmark_8h_source.html  classes.html  classpopot_1_1ABC_1_1algorithm_1_1Base-members.html  classpopot_1_1ABC_1_1algorithm_1_1Base.html  classpopot_1_1ABC_1_1individuals_1_1FoodSource-members.html  classpopot_1_1ABC_1_1individuals_1_1FoodSource.html  classpopot_1_1Exception.html  classpopot_1_1Exception_1_1Any-members.html  classpopot_1_1Exception_1_1Any.html  classpopot_1_1Exception_1_1BestParticleNotInitialized-members.html  classpopot_1_1Exception_1_1BestParticleNotInitialized.html  classpopot_1_1Exception_1_1DimensionMismatch-members.html  classpopot_1_1Exception_1_1DimensionMismatch.html  classpopot_1_1Exception_1_1EmptyQueue-members.html  classpopot_1_1Exception_1_1EmptyQueue.html  classpopot_1_1Exception_1_1FindBestFromEmptyNeighborhood-members.html  classpopot_1_1Exception_1_1FindBestFromEmptyNeighborhood.html  classpopot_1_1Exception_1_1IndexOutOfRange-members.html  classpopot_1_1Exception_1_1IndexOutOfRange.html  classpopot_1_1Exception_1_1MemoryNotAllocated-members.html  classpopot_1_1Exception_1_1MemoryNotAllocated.html  classpopot_1_1Exception_1_1ParticleNotFound-members.html  classpopot_1_1Exception_1_1ParticleNotFound.html  classpopot_1_1PSO_1_1SPSO2006_1_1PSO__params-members.html  classpopot_1_1PSO_1_1SPSO2006_1_1PSO__params.html  classpopot_1_1PSO_1_1SPSO2006_1_1Particle__SPSO2006__Params-members.html  classpopot_1_1PSO_1_1SPSO2006_1_1Particle__SPSO2006__Params.html  (+283 more)
examples/: CMakeLists.txt  example-000.cc  example-001.cc  example-002.cc  example-004.cc  example-005.cc
popot-1.00/: popot.pc.cmake  popot.pc.in
popot-1.00/examples/: CMakeLists.txt  (+2 more)
popot-1.10/: CMakeLists.txt
popot-1.10/examples/: example-003.cc
popot-1.10/src/: individuals.h  problems.h
popot-1.20/: CMakeLists.txt
popot-2.0/: CMakeLists.txt
popot-2.01/: CMakeLists.txt  INSTALL  README
popot-2.10/: LICENSE
popot-2.11/: INSTALL
src/: algorithm.h  initializers.h  maths.h  neighborhood.h  problems.h  rng_generators.h  topology.h
trunk/popot-2.0/examples/: CMakeLists.txt  example-004.cc  test.cc
trunk/popot-2.01/src/: CMakeLists.txt  algorithm.h
wiki/: performances.ods
(+495 files in other folders)
